Fix: Spell Casting listener and Flying Challenge off-screen bugs

--- a/public/css/games/flying-challenge.css
+++ b/public/css/games/flying-challenge.css
@@ -34,7 +34,7 @@
 .player-broom {
     position: absolute;
     left: 50px;
-    top: 50%;
+    top: 0;
     font-size: 3rem;
     width: 50px;
     height: 50px;
